* 解决自动生成缺少jakarta包的bug

--- a/src/main/resources/archetype-resources/__rootArtifactId__-gen/pom.xml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-gen/pom.xml
@@ -24,5 +24,11 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>jakarta.servlet</groupId>
+			<artifactId>jakarta.servlet-api</artifactId>
+		</dependency>
+
 	</dependencies>
 </project>
