--- a/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/bootstrap-prod.yml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-svr/src/main/resources/config/bootstrap-prod.yml
@@ -16,7 +16,23 @@ spring:
     nacos:
       config:
         server-addr: nacos1:8848,nacos2:8848,nacos3:8848
+        shared-configs:
+          - data-id: comm-zoo.yaml
+            group: REBUE
+            refresh: true
+          - data-id: comm-redis.yaml
+            group: REBUE
+            refresh: true
+          - data-id: comm-rabbitmq.yaml
+            group: REBUE
+            refresh: true
+          - data-id: comm-zipkin.yaml
+            group: REBUE
+            refresh: true
+          - data-id: comm-db.yaml
+            group: REBUE
+            refresh: true
       discovery:
-        server-addr: nacos1:8848,nacos2:8848,nacos3:8848
+        server-addr: ${spring.cloud.nacos.config.server-addr}
     sentinel:
       enabled: false
